[16.September 2008]
- StructuredWorld#next_location removed
- game.rb: FPS printing modified (fill instead of filled_rectangle)
- rudlmirror.rb: Finally I managed to write those mirroring methods!
  They work with TGA and PNG images, other formats not tried yet...
- RubyCampaign/Intro: phone_talk.rb: fixed bad speaker id.

[15.September 2008]
- talk.rb, talkable.rb: documentation changed to RDoc format;
  sentence textbox disappears after the user pushes SPACE or ENTER -
  not sooner and not later.
- structuredworld.rb: fixed bug "SW#next_level doesn't update @location"
- game.rb: Because problems in finishing of level occured and I wasn't
  able to solve them, I decided to clean Game#game_loop up. It helped.
- gamestate.rb: AllLocationsFinishedGameState removed

[13.September 2008]
- Developer's guide: descriptive section of vikings' states (with images)
- levelsuite.rb, level.rb, structuredworld.rb:
  Possibility to load level without a levelsuite. Theme can be defined
  in location.xml (not only in levelsuite.xml)
  (I needed this to make it easier for new developers working with
  Level-making-tutorial from the developer's guide.)
- location.rb, game.rb, gamestate.rb, 
  locs/TestsCampaign/Monster.../Conversation:
  New talking engine (I think it's simpler and more Lost-Vikings-Like than 
  that used in locs/Tests../Monster../OrangeHead)
- Fixed MobilePhone (it didn't work because it didn't have
  WIDTH and HEIGHT constants set -> collision Rectangle was empty)

[11.September 2008]
- RubyCampaign/Intro: 
    - conversations written
- location.rb and nullocation.rb moved back from SchwerEngine to freeVikings,
  because they aren't general enough and are messy.
  I also converted their documentation.
- team.rb: documentation converted, Team#[] modified,
  recursive calls in methods 'next' and 'previous' replaced by cycles
- Repaired WideBridge (private class of level ArcticTutorial)
- game.rb, gamestate.rb, location.rb: team moved from Game to Location