@@ -4,8 +4,9 @@
 
 ======== RubyCampaign ==================================================
 
+(-) Finish Boat.
+
 (-) Intro: 
-    add a boat which will take the vikings home,
     their houses, wifes and children,
 
 (-) Repair Assembler tileset (the black stripes are awful!)
@@ -28,12 +29,12 @@ Wifes and children will be static, so they don't need walk cycles etc.
 
 ======== Code ==========================================================
 
-(-) Exitting is totally task of Location, not Game
-    (it makes it possible to perform on-exit dialogues etc.)
-
 (-) Entity#paint_rect and Entity#collision_rect (which are by default
     aliases, but can be different; Entity#rect will be alias of
     Entity#collision_rect)
+
+(-) Exitting is totally task of Location, not Game
+    (it makes it possible to perform on-exit dialogues etc.)
 
 (-) release tool: add task: mail to freevikings-users mailing list
 
